corrected some spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -446,7 +446,7 @@ polyline {
 .main-image-container{
   display: grid;
   place-items: center;
-  min-height: 80vh;
+  min-height: 50vh;
 }
 
 .before-and-after-container{
@@ -494,7 +494,7 @@ polyline {
 .slider-line{
   position: absolute;
   inset: 0;
-  width: .5rem;
+  width: .2rem;
   height: 100%;
   background-color: white;
   z-index: 10;
@@ -506,7 +506,7 @@ polyline {
 .slider-button{
   position: absolute;
   background-color: white;
-  padding: .5rem;
+  padding: .4rem;
   border-radius: 100vw;
   display: grid;
   place-items: center;
